<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="radiogroupdemo.mytextview.com.radiogroupdemo.MainActivity">

    <TextView
        android:id="@+id/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main_Title"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/MainTitle"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23sp"
        android:layout_below="@+id/Title">

        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive_button"/>

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative_button"/>

        <RadioButton
            android:id="@+id/radioButtionMayBe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maybe_button"/>
    </RadioGroup>

    <Button
        android:id="@+id/showChoiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/RadioGroup"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
